[package]
name = "blockchain-pow-julia"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
enum-as-inner = "0.5.1"
itertools = "0.10.5"
num = "0.4.0"
p256 = { version = "0.12.0", features = ["ecdsa"] }
petgraph = "0.6.3"
rand = "0.8.5"
ring = "0.16.20"
sha2 = "0.10.6"
tap = "1.0.1"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
